Fix text wrap bug for long URL in preview page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,10 @@ h1 {
     opacity: 0.7;
 }
 
+.word-break-all {
+    word-break: break-all;
+}
+
 .image-credit {
     position: absolute;
     bottom: 0;
